# joudo

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  desktop-macos.yml  release-desktop.yml
apps/bridge/: package.json  tsconfig.build.json
apps/bridge/scripts/: session-semantics-spike.mjs  undo-spike.mjs
apps/bridge/src/: approval-rollback.test.ts  copilot-sdk.ts  errors-and-approvals.test.ts  errors.ts  index.ts  mvp-state.flow.test.ts  (+5 more)
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: gen-icon.mjs  icon.icns  tray-icon.rgba
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: acp-demo-plan.md  architecture.md  assessment-report.md  audit-2026-03-22.md  current-status.md  defect-tracker.md  frontend-evaluation.md  implementation-notes.md  iteration-plan.md  next-step-plan.md  onboarding.md  packaging-release-plan.md  policy-guide.md  policy.md  progress-summary.md  quickstart.md  session-recovery-plan.md  ui-rebrand-plan.md
docs/code_guide/: 00-architecture-overview.md  01-bridge-core.md  02-bridge-state.md  03-bridge-policy.md  04-bridge-auth.md  05-web.md  06-desktop.md  07-shared-and-scripts.md
docs/examples/: joudo-policy.recommended.yml
scripts/: cleanup-dev.sh  joudo-start.sh  smoke-test-prod.mjs  validate-policy-live.mjs  write-docs.py
(+103 files in other folders)
